--- a/DefaultClassification.ipynb
+++ b/DefaultClassification.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "10e98d98",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0002fa37",
    "metadata": {},
    "outputs": [],
@@ -98,12 +98,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "id": "df70cd6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.concat([df_train, df_test], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3f5553f",
+   "metadata": {},
+   "source": [
+    "Проверим датасет на дупликаты."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4219f39b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Deal_id'].duplicated().sum()"
    ]
   },
   {
